kustomizations/apps/overlays/local/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyapi
spec:
  template:
    spec:
      containers:
        - name: pyapi
          image: "dannylongeuay/ndsq-pyapi:1.0.5"
