kustomizations/apps/overlays/local/worker_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyapi-worker
spec:
  template:
    spec:
      containers:
        - name: pyapi-worker
          image: "dannylongeuay/ndsq-api:latest"
