kustomizations/apps/overlays/local/goapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goapi
  labels:
    app.kubernetes.io/name: goapi
    app.kubernetes.io/instance: goapi
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "goapi.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goapi
                port:
                  number: 5000
