kustomizations/apps/overlays/local/portfolio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  labels:
    app.kubernetes.io/name: portfolio
    app.kubernetes.io/instance: portfolio
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 5000
